# openflex-mujoco

./: .gitattributes  .gitignore  .gitmodules  README.md  README_CN.md  build_hand_xml.py  build_urdf.py  control.py  convert.py  generate_mujoco_fixed_previous.py  ik.py  openflex_integrated_robot.urdf  openflex_mujoco.xml  openflex_mujoco_fixed.urdf  openflex_mujoco_hand.xml  openflex_mujoco_selfcol.xml  openflex_v10_bimanual.urdf  pyproject.toml  requirements.txt  scene_utils.py  view_ros2_visual_meshes.py  viewer.py
ldjy_hand/: ldjy_left_hand.xml  ldjy_right_hand.xml
ldjy_hand/meshes/: finger1_link1.stl  finger1_link2.stl  finger1_link3.stl  finger1_link4.stl  finger1_link4_collision.stl  finger2_link1.stl  finger2_link2.stl  finger2_link3.stl  finger2_link4.stl  finger2_link4_collision.stl  finger3_link1.stl  finger3_link2.stl  finger3_link3.stl  finger3_link4.stl  finger3_link4_collision.stl  finger4_link1.stl  finger4_link2.stl  finger4_link3.stl  finger4_link4.stl  finger4_link4_collision.stl  palm.stl  palm_collision.stl  thumb_link1.stl  thumb_link2.stl  thumb_link3.stl  thumb_link4.stl  thumb_link4_collision.stl
mujoco_meshes/: material.mtl
